--- a/src/views/view/ViewAllTags.html
+++ b/src/views/view/ViewAllTags.html
@@ -110,7 +110,7 @@
                 <span class="profile-ava">
                     <img alt="" src="img/avatar1_small.jpg">
               </span>
-                <span class="username">Jenifer Smith</span>
+                <span class="username">NAME</span>
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu extended logout">
@@ -204,30 +204,33 @@
                   </ol>
                 </div>
               </div>
-
               <div class="row">
                 <div class="col-lg-12">
                   <section class="panel">
                     <header class="panel-heading">Tag List</header>
                     <div class="panel-body">
                       <div class="form">
-                        <form action="#" class="form-horizontal">
+                        <form method="GET" action="/viewalltags/viewTagged" class="form-horizontal">
                           <div class="form-group">
                             <div class="col-sm-12">
                               <table class="table">
                                 <thead>
                                   <tr>
-                                    <th>Tagged Content</th>
                                     <th>Tag</th>
                                   </tr>
                                 </thead>
                                 <tbody>
-                                  <tr>
-                                    <td>1</td>
-                                    <td>
-                                      <button type="button" class="btn btn-success"><i class="fa fa-tag"></i> Science</button>
-                                    </td>
-                                  </tr>
+
+                                  <% for(var i=0 ; i< tags.length ; i++) {%>
+                                    <tr>
+                                      <td>
+                                        <button name="tagButton" type="submit" class="btn btn-success " value=<%= tags[tags.length-i-1].tag_name %>><i class="fa fa-tag "></i>
+                                          <%= tags[tags.length-i-1].tag_name %>
+                                        </button>
+                                      </td>
+                                    </tr>
+                                    <% } %>
+
                                 </tbody>
                               </table>
                             </div>
