--- a/src/views/create/CreateEventPage.html
+++ b/src/views/create/CreateEventPage.html
@@ -60,7 +60,7 @@
 
 <body>
 
-  <!-- Navigation -->
+<!-- Navigation -->
   <nav ng-app="app" ng-controller="MainController" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -82,9 +82,6 @@
         <ul class="nav navbar-nav">
           <li>
             <a href="/profile"><i class="fa fa-user"></i> Profile</a>
-          </li>
-          <li>
-            <a href="/cataloguefollowers"><i class="fa fa-users"></i> Followers</a>
           </li>
           <li>
             <a href="/catalogueprojects"><i class="fa fa-briefcase"></i> Projects</a>
@@ -110,16 +107,16 @@
                 <span class="profile-ava">
                     <img alt="" src="img/avatar1_small.jpg">
               </span>
-                <span class="username">Jenifer Smith</span>
+                <span class="username">*<%= profile_name %></span>
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu extended logout">
                 <div class="log-arrow-up"></div>
                 <li>
-                  <a href="#"><i class="icon_clock_alt"></i> Account Settings</a>
-                </li>
-                <li>
-                  <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                  <form method="POST" action="/logout">
+                    <button href="#"><i class="icon_key_alt" type="submit"></i> Log Out</button>
+                  </form>
+
                 </li>
 
               </ul>
@@ -128,39 +125,27 @@
             <li id="alert_notificatoin_bar" class="dropdown pull-right">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                 <i class="icon-bell-l"></i>
-                <span class="badge bg-important">7</span>
+                <span class="badge bg-important">3</span>
               </a>
               <ul class="dropdown-menu extended notification">
                 <div class="notify-arrow notify-arrow-blue"></div>
                 <li>
-                  <p class="blue">You have 4 new notifications</p>
+                  <p class="blue">You have new notifications</p>
                 </li>
                 <li>
                   <a href="#">
                     <span class="label label-primary"><i class="icon_profile"></i></span> Friend Request
-                    <span class="small italic pull-right">5 mins</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="label label-warning"><i class="icon_pin"></i></span> John location.
-                    <span class="small italic pull-right">50 mins</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
                     <span class="label label-danger"><i class="icon_book_alt"></i></span> Project 3 Completed.
-                    <span class="small italic pull-right">1 hr</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <span class="label label-success"><i class="icon_like"></i></span> Mick appreciated your work.
-                    <span class="small italic pull-right"> Today</span>
+                    <span class="label label-success"><i class="icon_like"></i></span> Sebastian left you a post.
                   </a>
-                </li>
-                <li>
-                  <a href="#">See all notifications</a>
                 </li>
               </ul>
             </li>
