--- a/src/views/page/ProfilePage.html
+++ b/src/views/page/ProfilePage.html
@@ -85,9 +85,6 @@
             <a href="/profile"><i class="fa fa-user"></i> Profile</a>
           </li>
           <li>
-            <a href="/cataloguefollowers"><i class="fa fa-users"></i> Followers</a>
-          </li>
-          <li>
             <a href="/catalogueprojects"><i class="fa fa-briefcase"></i> Projects</a>
           </li>
           <li>
@@ -129,39 +126,27 @@
             <li id="alert_notificatoin_bar" class="dropdown pull-right">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                 <i class="icon-bell-l"></i>
-                <span class="badge bg-important">7</span>
+                <span class="badge bg-important">3</span>
               </a>
               <ul class="dropdown-menu extended notification">
                 <div class="notify-arrow notify-arrow-blue"></div>
                 <li>
-                  <p class="blue">You have 4 new notifications</p>
+                  <p class="blue">You have new notifications</p>
                 </li>
                 <li>
                   <a href="#">
                     <span class="label label-primary"><i class="icon_profile"></i></span> Friend Request
-                    <span class="small italic pull-right">5 mins</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="label label-warning"><i class="icon_pin"></i></span> John location.
-                    <span class="small italic pull-right">50 mins</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
                     <span class="label label-danger"><i class="icon_book_alt"></i></span> Project 3 Completed.
-                    <span class="small italic pull-right">1 hr</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <span class="label label-success"><i class="icon_like"></i></span> Mick appreciated your work.
-                    <span class="small italic pull-right"> Today</span>
+                    <span class="label label-success"><i class="icon_like"></i></span> Sebastian left you a post.
                   </a>
-                </li>
-                <li>
-                  <a href="#">See all notifications</a>
                 </li>
               </ul>
             </li>
