Making all pages work with new navbar and setting initial infomartion need in page for it to work

--- a/src/views/page/ProfilePage.html
+++ b/src/views/page/ProfilePage.html
@@ -261,20 +261,26 @@
                           </a>
                         </li>
                         <li>
-                          <a data-toggle="tab" href="#groups">
-                            <i class="icon-user"></i> Groups
+                          <a data-toggle="tab" href="#followers">
+                            <i class="icon-user"></i> Followers
                           </a>
                         </li>
                         <li>
-                          <a data-toggle="tab" href="#projects">
-                            <i class="icon-user"></i> Projects
-                          </a>
-                        </li>
-                        <li>
-                          <a data-toggle="tab" href="#edit-profile">
-                            <i class="icon-envelope"></i> Edit Profile
-                          </a>
-                        </li>
+                          <li>
+                            <a data-toggle="tab" href="#groups">
+                              <i class="icon-user"></i> Groups
+                            </a>
+                          </li>
+                          <li>
+                            <a data-toggle="tab" href="#projects">
+                              <i class="icon-user"></i> Projects
+                            </a>
+                          </li>
+                          <li>
+                            <a data-toggle="tab" href="#edit-profile">
+                              <i class="icon-envelope"></i> Edit Profile
+                            </a>
+                          </li>
                       </ul>
                     </header>
                     <div class="panel-body">
@@ -379,24 +385,49 @@
                             </div>
                           </section>
                         </div>
-                        <!-- groups -->
-                        <div id="groups" class="tab-pane">
+                        <!-- followers -->
+                        <div id="followers" class="tab-pane">
                           <section class="panel">
                             <div class="panel-body bio-graph-info">
+                              <h1>Followers</h1>
+                              <hr>
+                              <form method="POST" class="form-horizontal" role="form" action="/profile/follower">
+                                <% for(var i=0; i < followers.length; i++) {%>
+                                  <div class=" form-group ">
+                                    <div class="col-lg-1 ">
+                                      <img src="img/pips_logo.jpg " class="img-circle img-responsive " alt="placeholder " width="50" height="50 ">
+                                    </div>
+                                    <div class="col-lg-4 ">
+                                      <a href="# "><h1><%= followers[i].name %></h1> </a>
+                                    </div>
+                                    <div class="col-lg-7 " style="margin-top: 2% ">
+                                      <button type="submit " class="btn btn-danger btn pull-right ">Unfollow</button>
+                                    </div>
+                                  </div>
+                              </form>
+                            </div>
+                          </section>
+                        </div>
+
+                        <!-- groups -->
+                        <div id="groups " class="tab-pane ">
+                          <section class="panel ">
+                            <div class="panel-body bio-graph-info ">
                               <h1>Groups</h1>
                               <hr>
-                              <form class="form-horizontal" role="form">
-                                <div class="form-group">
-                                  <div class="col-lg-2">
-                                    <img src="img/12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
-                                    height="100">
+                              <form class="form-horizontal " role="form ">
+                                <div class="form-group ">
+                                  <div class="col-lg-2 ">
+                                    <img src="img/12048903_10153709165902375_2021103471_n.jpg " class="img-thumbnail img-responsive
+                                  " alt="placeholder " width="100 " height="100 ">
                                   </div>
                                   <h1>PIPS Team</h1>
                                   <p>Group description 1</p>
                                 </div>
-                                <div class="form-group">
-                                  <div class="col-lg-2">
-                                    <img src="img/default-placeholder.png" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
+                                <div class="form-group ">
+                                  <div class="col-lg-2 ">
+                                    <img src="img/default-placeholder.png " class="img-thumbnail img-responsive " alt="placeholder
+                                  " width="100 " height="100 ">
                                   </div>
                                   <h1>Programmers with Attitude</h1>
                                   <p>Group description 2</p>
@@ -407,23 +438,24 @@
                         </div>
 
                         <!-- projects -->
-                        <div id="projects" class="tab-pane">
-                          <section class="panel">
-                            <div class="panel-body bio-graph-info">
+                        <div id="projects " class="tab-pane ">
+                          <section class="panel ">
+                            <div class="panel-body bio-graph-info ">
                               <h1>Projects</h1>
                               <hr>
-                              <form class="form-horizontal" role="form">
-                                <div class="form-group">
-                                  <div class="col-lg-2">
-                                    <img src="img/12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
-                                    height="100">
+                              <form class="form-horizontal " role="form ">
+                                <div class="form-group ">
+                                  <div class="col-lg-2 ">
+                                    <img src="img/12048903_10153709165902375_2021103471_n.jpg " class="img-thumbnail img-responsive
+                                  " alt="placeholder " width="100 " height="100 ">
                                   </div>
                                   <h1>PIPS Project</h1>
                                   <p>Project description 1</p>
                                 </div>
-                                <div class="form-group">
-                                  <div class="col-lg-2">
-                                    <img src="img/wacky-tube-man.gif" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
+                                <div class="form-group ">
+                                  <div class="col-lg-2 ">
+                                    <img src="img/wacky-tube-man.gif " class="img-thumbnail img-responsive " alt="placeholder
+                                  " width="100 " height="100 ">
                                   </div>
                                   <h1>Wacky Inflatable Tube Man Simulator</h1>
                                   <p>Group description 2</p>
@@ -434,45 +466,45 @@
                         </div>
 
                         <!-- edit-profile -->
-                        <div id="edit-profile" class="tab-pane">
-                          <section class="panel">
-                            <div class="panel-body bio-graph-info">
+                        <div id="edit-profile " class="tab-pane ">
+                          <section class="panel ">
+                            <div class="panel-body bio-graph-info ">
                               <h1> Profile Info</h1>
-                              <form method="POST" class="form-horizontal" role="form" action="/profile/updatebioinfo">
-                                <div class="form-group">
-                                  <label class="col-lg-2 control-label"> Name</label>
-                                  <div class="col-lg-6">
-                                    <input type="text" class="form-control" name="profile_name" placeholder=" ">
+                              <form method="POST " class="form-horizontal " role="form " action="/profile/updatebioinfo ">
+                                <div class="form-group ">
+                                  <label class="col-lg-2 control-label "> Name</label>
+                                  <div class="col-lg-6 ">
+                                    <input type="text " class="form-control " name="profile_name " placeholder=" ">
                                   </div>
                                 </div>
-                                <div class="form-group">
-                                  <label class="col-lg-2 control-label"> Description </label>
-                                  <div class="col-lg-10">
-                                    <textarea name="profile_desc" class="form-control" cols="30" rows="5"></textarea>
+                                <div class="form-group ">
+                                  <label class="col-lg-2 control-label "> Description </label>
+                                  <div class="col-lg-10 ">
+                                    <textarea name="profile_desc " class="form-control " cols="30 " rows="5 "></textarea>
                                   </div>
                                 </div>
-                                <div class="form-group">
-                                  <label class="col-lg-2 control-label">Country</label>
-                                  <div class="col-lg-6">
-                                    <input type="text" class="form-control" name="profile_country" placeholder=" ">
+                                <div class="form-group ">
+                                  <label class="col-lg-2 control-label ">Country</label>
+                                  <div class="col-lg-6 ">
+                                    <input type="text " class="form-control " name="profile_country " placeholder=" ">
                                   </div>
                                 </div>
-                                <div class="form-group">
-                                  <label class="col-lg-2 control-label">Age</label>
-                                  <div class="col-lg-6">
-                                    <input type="text" class="form-control" name="profile_age" placeholder=" ">
+                                <div class="form-group ">
+                                  <label class="col-lg-2 control-label ">Age</label>
+                                  <div class="col-lg-6 ">
+                                    <input type="text " class="form-control " name="profile_age " placeholder=" ">
                                   </div>
                                 </div>
-                                <div class="form-group">
-                                  <div class="col-lg-offset-2 col-lg-10">
-                                    <button type="submit" class="btn btn-primary">Save</button>
-                                    <button type="reset" class="btn btn-danger">Cancel</button>
+                                <div class="form-group ">
+                                  <div class="col-lg-offset-2 col-lg-10 ">
+                                    <button type="submit " class="btn btn-primary ">Save</button>
+                                    <button type="reset " class="btn btn-danger ">Cancel</button>
 
                                   </div>
                                 </div>
                               </form>
-                              <form method="POST" action="/profile/deleteaccount">
-                                <button type="submit" name="deleteaccount" class="btn btn-danger" >Delete Account</button>
+                              <form method="POST " action="/profile/deleteaccount ">
+                                <button type="submit " name="deleteaccount " class="btn btn-danger " style="pull-right ">Delete Account</button>
                               </form>
                             </div>
                           </section>
