--- a/src/views/view/ViewTagged.html
+++ b/src/views/view/ViewTagged.html
@@ -107,7 +107,7 @@
                                 <span class="profile-ava">
                     <img alt="" src="img/avatar1_small.jpg">
               </span>
-                                <span class="username">*<%= profile_name %></span>
+                                <span class="username"><%= profile_name %></span>
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu extended logout">
