--- a/src/views/view/ViewAllTags.html
+++ b/src/views/view/ViewAllTags.html
@@ -195,7 +195,7 @@
                     <header class="panel-heading">Tag List</header>
                     <div class="panel-body">
                       <div class="form">
-                        <form method="GET" action="/viewalltags/viewTagged" class="form-horizontal">
+                        <form method="GET" action="/viewtagged/" class="form-horizontal">
                           <div class="form-group">
                             <div class="col-sm-12">
                               <table class="table">
