--- a/src/views/catalogue/CatalogueEvents.html
+++ b/src/views/catalogue/CatalogueEvents.html
@@ -56,13 +56,13 @@
   <!-- custome script for all page -->
   <script src="/js/scripts.js"></script>
 
-  <title>PIPS- Event Catalgue</title>
+  <title><%= pagename %></title>
 </head>
 
 <body>
 
  <!-- Navigation -->
-  <nav ng-app="app" ng-controller="MainController" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header ">
@@ -193,7 +193,7 @@
                     <div class="panel-body bio-graph-info">
                       <h1><i class="fa fa-calendar"></i>Events</h1>
                       <hr>
-                      <form class="form-horizontal" role="form">
+                      <form class="form-horizontal" role="form" action="/event" method="GET">
                         <% for(var i=0; i < events.length; i++) {%>
                         <div class="form-group">
                         <div class="col-lg-2">
@@ -201,16 +201,16 @@
                           height="100">
                         </div>
                           <div class="col-lg-5">
-                            <h1><%= events[i].name %></h1>
-                            <p><%= events[i].description %></p>
+                            <button name="eventName" value=<%= events[i].e_name %>><%= events[i].e_name %></button>
+                            <p><%= events[i].e_description %></p>
                             <label>Event Date:</label>
-                            <label><%= events[i].date %></label>
+                            <label><%= events[i].e_date %></label>
                             <label>Event Location:</label>
-                            <label><%= events[i].location %></label>
+                            <label><%= events[i].e_location %></label>
                             <br></br>
                             <label class="control-label">Tags</label>
-                            <% for(var j=0; j < events[i].tag_list.length; j++) {%>
-                              <button type="button" class="btn btn-success"><i class="fa fa-tag"></i><%= events[i].tag_list[j] %></button>
+                            <% for(var j=0; j < events[i].e_tag_list.length; j++) {%>
+                              <button type="button" class="btn btn-success"><i class="fa fa-tag"></i><%= events[i].e_tag_list[j] %></button>
                             <% } %>
                           </div>
                           <div class="col-lg-5" style="margin-top: 2%">
